@@ -1,10 +1,7 @@
 AUX exiv2-0.19-syntax-fix.patch 598 RMD160 f59d55322ee8d945bc1a604d28952269a7fa6026 SHA1 a0147e32756f1036c6631d14d79b06d270213e1f SHA256 41a6fe03d35fca3ad46c43776d682ab9acc0a395ecb5261fd6c550a7dc2a07c3
-DIST exiv2-0.17.1.tar.gz 1807220 RMD160 e9a91efcbbf31240e741a5994e4094905280345f SHA1 7872fde6181dd0958c8d855bea35b95094ac06c7 SHA256 6b5516159a1068e6253c787e391288e1b170bc702553c7121c4b693b293704cb
-DIST exiv2-0.18.1.tar.gz 2342158 RMD160 2066f71903a61a32ed435c3602a71ef8c0ad2428 SHA1 d4ea2c790ea0bf36564f6442e90545574b1ba2d5 SHA256 e1480fe8859f47878cb3d5874573c395e622c073d64772f33521080ec468db35
 DIST exiv2-0.19.tar.gz 2658781 RMD160 263267fb75341a6eb60e5201b88bfea11ef18eea SHA1 4ab8d830094f2842bc286d8e7fb03100ca7f07b1 SHA256 1733dab5e81d9cf4e0b3d6eeed009103e5baff4fecfc127ecee016b3a67c51ef
-EBUILD exiv2-0.17.1.ebuild 2177 RMD160 05aa269252bf5ac2b778207e40cdb4f585d8299e SHA1 ac40e4ebf8abae248a6c647f6b00a923ad71e8f0 SHA256 2390975550fe21ad23c74349b16d5fa8a1f14505a5d28f55fda2968336936fdb
-EBUILD exiv2-0.18.1-r1.ebuild 3042 RMD160 1b11fb513c2c824608416dcee69459cd93342b45 SHA1 5405b7ab7c930746fa91d4b97c465489db8829c0 SHA256 d51dd16807ce12f2a07d694a127d15896597e5b37b34cec5f9a77f1857d02ab9
-EBUILD exiv2-0.18.1.ebuild 2444 RMD160 e88b7fb59964f1e77ad7d2b54d278b3d0015c544 SHA1 effcb4e9b6d2afb7172cd975c13381379e070985 SHA256 8fef42a8c59b53b4b45aea75ec8ce0ba23121a741bff14cd529310438215bf4b
+DIST exiv2-0.20.tar.gz 2941045 RMD160 f318cc45e0b512cbe508c19bf5bee7397b0ba15a SHA1 3ebab0acd114a463fe11881bd95f1c3e258c7c0c SHA256 7485f252c18119e61cdf1d73487bf0c5e3da6707decd6238407504847b323972
 EBUILD exiv2-0.19.ebuild 3100 RMD160 3ec9b423d221d4da1c1f27bdc23844ecdb1a394a SHA1 342a8546da66858a0eeb7ba39c54347fd2144456 SHA256 0e8d673d48016ec09407005bc191b908a40dd3511ffdfca3b21a8dd62fbdf4e8
-MISC ChangeLog 10528 RMD160 4e712cdfc56adf8fd5c4671ebf319652ee54a120 SHA1 22f885b6ec965e9c63d7cb6e83540b55b81fd639 SHA256 8d2d6f72ef3f123ba67e7f64b1b05055d36c6fb515ec88f684b305b4eedd1820
+EBUILD exiv2-0.20.ebuild 3125 RMD160 3c601627dadefdfcbb0dd55f93f36f0d5b77948e SHA1 d7feb5d0e1fd1777f18f1cb2cf4a7e4979c6378c SHA256 251957d9c82fca749533c5edcfd7ff5a0489ac8caff8b82159392ba0133ed7a4
+MISC ChangeLog 10793 RMD160 ae68c667465f17e3323053bbcf2558868d3b2676 SHA1 0e065e41016d6ff3a11ed0c26886867448813ed4 SHA256 3e6717dd5388c15d16806aa9ecfa3ca305027b9c8024c844a01efde7c24feb5c
 MISC metadata.xml 499 RMD160 977e5210d3b213c9c743a476d77737af81ca805a SHA1 1784af211aba78b938559b591cd6d6d3bae0427f SHA256 d536220947772cba94e4d08e8da8139987413ded44f779e62165ea308bffb5ff
