@@ -1,6 +1,14 @@
 # ChangeLog for media-gfx/exiv2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiv2/ChangeLog,v 1.87 2010/04/18 19:24:55 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/exiv2/ChangeLog,v 1.89 2010/07/20 20:51:35 sbriesen Exp $
+
+  20 Jul 2010; Stefan Briesenick <sbriesen@gentoo.org> -exiv2-0.18.1.ebuild:
+  removed old version
+
+*exiv2-0.20 (20 Jul 2010)
+
+  20 Jul 2010; Stefan Briesenick <sbriesen@gentoo.org> +exiv2-0.20.ebuild:
+  version bump. fixed python handling. solving bug #313493.
 
   18 Apr 2010; Markus Meier <maekke@gentoo.org> exiv2-0.19.ebuild:
   amd64 stable, bug #306333
